force-app/main/default/objects/CPQ2_Related_Product__c/CPQ2_Related_Product__c.object-meta.xml
<CustomObject>
    <label>Related Product</label>
    <nameField>
        <label>Related Products  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>