force-app/main/default/objects/CPQ2_Related_Product__c/fields/CPQ2_Auto_Add_Related_Product__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Auto_Add_Related_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Add Related Product</label>
    <type>Checkbox</type>
</CustomField>