force-app/main/default/objects/CPQ2_Related_Product__c/fields/CPQ2_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>RelatedProducts</relationshipName>
    <type>Lookup</type>
</CustomField>