force-app/main/default/objects/CPQ2_Related_Product__c/fields/CPQ2_Related_Product__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Products</relationshipLabel>
    <relationshipName>ParentProducts</relationshipName>
    <type>Lookup</type>
</CustomField>