force-app/main/default/objects/CPQ2_Related_Product__c/fields/CPQ2_Show_as_Related_Product__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Show_as_Related_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will allow the Related Product to show as a dependent product in the &quot;related Product&quot; drop-down when the Parent Product has been selected.</inlineHelpText>
    <label>Show as Related Product</label>
    <type>Checkbox</type>
</CustomField>